--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -41,68 +41,70 @@ body {
   font-size: 1.5em;
 }
 
-.Sbox-wrapper .frameworks {
+.Sbox-wrapper .frontend {
+  margin-left: 5em;
   margin-top: 6em;
   text-align: center;
-  width: 450px;
-  height: 380px;
+  width: 330px;
+  height: 300px;
   background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
   padding-top: 2em;
   position: relative;
 }
 
-.Sbox-wrapper .frameworks .tape {
+.Sbox-wrapper .frontend .tape {
   width: 30px;
   height: 70px;
   background-color: rgba(255, 255, 255, 0.26);
   position: absolute;
-  top: -11%;
+  top: -13%;
   left: 48%;
-  transform: translateX(-48%) rotate(9deg);
+  transform: rotate(10deg);
 }
 
-.Sbox-wrapper .frameworks .s-line {
-  width: 60px;
+.Sbox-wrapper .frontend .s-line {
+  width: 57px;
   height: 0.02em;
   opacity: .5;
   background-color: #dedede;
   position: absolute;
-  top: 80%;
-  left: -13.7%;
+  top: 240px;
+  left: -57px;
 }
 
-.Sbox-wrapper .frameworks .img-box img {
+.Sbox-wrapper .frontend .img-box img {
   margin: 0.7em 1em;
 }
 
-.Sbox-wrapper .frameworks .frontend {
+.Sbox-wrapper .frontend .publisher {
   text-align: left;
-  width: 350px;
-  height: 330px;
+  width: 450px;
+  height: 400px;
   background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
   padding-top: 1em;
   padding-left: 1em;
   position: absolute;
-  left: -92%;
-  top: 50%;
+  left: -506px;
+  top: 40%;
 }
 
-.Sbox-wrapper .frameworks .frontend .s-line {
+.Sbox-wrapper .frontend .publisher .s-line {
   position: absolute;
   width: 0.02em;
-  height: 30px;
-  top: 329px;
-  left: 330px;
+  height: 35px;
+  top: 400px;
+  left: 195px;
 }
 
-.Sbox-wrapper .frameworks .frontend .img-box {
-  padding-left: 0.8em;
+.Sbox-wrapper .frontend .publisher .img-box {
+  padding-left: 0.9em;
   padding-top: 0.7em;
 }
 
-.Sbox-wrapper .frameworks .frontend .img-box div {
+.Sbox-wrapper .frontend .publisher .img-box div {
+  margin: 0.9em 0.5em;
   width: 70px;
   height: 70px;
   display: inline-block;
@@ -112,158 +114,197 @@ body {
   padding-top: 0.9em;
 }
 
-.Sbox-wrapper .frameworks .frontend .img-box img {
-  margin: 0.5em 0.8em;
+.Sbox-wrapper .frontend .publisher .img-box img {
+  margin: 0.9em 0.5em;
 }
 
-.Sbox-wrapper .frameworks .backend {
+.Sbox-wrapper .frontend .backend {
   text-align: center;
-  width: 250px;
-  height: 230px;
+  width: 350px;
+  height: 330px;
   background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
-  padding-top: 1em;
+  padding-top: 2em;
   position: absolute;
-  left: 110%;
-  top: 20%;
+  left: 380px;
+  top: 70px;
 }
 
-.Sbox-wrapper .frameworks .backend .s-line {
-  width: 45px;
+.Sbox-wrapper .frontend .backend .s-line {
+  width: 52px;
   height: 0.02em;
   opacity: .5;
   background-color: #dedede;
   position: absolute;
   top: 50px;
-  left: -45px;
+  left: -52px;
 }
 
-.Sbox-wrapper .frameworks .backend .img-box img {
-  margin: 0.5em 0.5em;
+.Sbox-wrapper .frontend .backend .img-box {
+  padding-top: 0.8em;
 }
 
-.Sbox-wrapper .frameworks .backend .img-box div {
+.Sbox-wrapper .frontend .backend .img-box img {
+  margin: 0.5em;
+}
+
+.Sbox-wrapper .frontend .backend .img-box div {
   display: inline-block;
   font-family: "Noto Sans KR", sans-serif;
   font-size: 0.8em;
+  margin: 0.5em;
 }
 
-.Sbox-wrapper .frameworks .tools {
+.Sbox-wrapper .frontend .etc {
   text-align: left;
-  width: 250px;
-  height: 200px;
+  width: 200px;
+  height: 190px;
   background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
   padding-top: 1em;
   padding-left: 1em;
   position: absolute;
-  left: 85%;
-  bottom: -69%;
+  left: 434px;
+  bottom: -370px;
 }
 
-.Sbox-wrapper .frameworks .tools .s-line {
+.Sbox-wrapper .frontend .etc .s-line {
   width: 0.02em;
-  height: 60px;
+  height: 80px;
   opacity: .5;
   background-color: #dedede;
   position: absolute;
-  top: -30%;
-  left: 7%;
+  top: -80px;
+  left: 45px;
 }
 
-.Sbox-wrapper .frameworks .tools .img-box {
+.Sbox-wrapper .frontend .etc .img-box {
   text-align: center;
   padding-top: 0.8em;
   margin-right: 1em;
 }
 
-.Sbox-wrapper .frameworks .tools .img-box img {
+.Sbox-wrapper .frontend .etc .img-box img {
   margin: 0.5em 0.5em;
 }
 
-.Sbox-wrapper .frameworks .design {
-  text-align: center;
-  width: 280px;
-  height: 200px;
+.Sbox-wrapper .frontend .server {
+  text-align: left;
+  width: 250px;
+  height: 190px;
   background: rgba(255, 255, 255, 0.23);
   border: 1px solid #dedede;
   padding-top: 1em;
+  padding-left: 1em;
   position: absolute;
-  left: 7%;
-  bottom: -65%;
+  left: 160px;
+  bottom: -230px;
 }
 
-.Sbox-wrapper .frameworks .design .s-line {
-  width: 112px;
+.Sbox-wrapper .frontend .server .s-line {
+  width: 70px;
   height: 0.02em;
   opacity: .5;
   background-color: #dedede;
   position: absolute;
-  top: 123px;
-  left: -112px;
+  top: 100px;
+  left: 250px;
 }
 
-.Sbox-wrapper .frameworks .design .img-box {
+.Sbox-wrapper .frontend .server .img-box {
+  text-align: center;
+  padding-top: 0.8em;
+  margin-right: 1em;
+}
+
+.Sbox-wrapper .frontend .server .img-box img {
+  margin: 0.5em 0.5em;
+}
+
+.Sbox-wrapper .frontend .design {
+  text-align: center;
+  width: 300px;
+  height: 180px;
+  background: rgba(255, 255, 255, 0.23);
+  border: 1px solid #dedede;
+  padding-top: 1em;
+  position: absolute;
+  left: -260px;
+  bottom: -340px;
+}
+
+.Sbox-wrapper .frontend .design .s-line {
+  width: 50px;
+  height: 0.02em;
+  opacity: .5;
+  background-color: #dedede;
+  position: absolute;
+  top: 95px;
+  left: -50px;
+}
+
+.Sbox-wrapper .frontend .design .img-box {
   padding-top: 1em;
 }
 
-.Sbox-wrapper .frameworks .design .img-box img {
-  margin: 0.5em 0.3em;
+.Sbox-wrapper .frontend .design .img-box img {
+  margin: 0 0.3em;
 }
 
 @media screen and (max-width: 1700px) {
-  .Sbox-wrapper .frameworks .s-line {
+  .Sbox-wrapper .frontend .s-line {
     display: none;
   }
 }
 
 @media screen and (max-width: 1199px) {
-  .Sbox-wrapper .frameworks .frameworks .s-line {
-    display: none;
+  .Sbox-wrapper .frontend {
+    width: 450px;
   }
-  .Sbox-wrapper .frameworks .frontend, .Sbox-wrapper .frameworks .backend, .Sbox-wrapper .frameworks .tools, .Sbox-wrapper .frameworks .design {
+  .Sbox-wrapper .frontend .publisher, .Sbox-wrapper .frontend .backend, .Sbox-wrapper .frontend .etc, .Sbox-wrapper .frontend .server, .Sbox-wrapper .frontend .design {
     position: static;
     margin-top: 2em;
+    padding: 1em 0;
     text-align: center;
     width: 450px;
   }
-  .Sbox-wrapper .frameworks .frontend .img-box, .Sbox-wrapper .frameworks .backend .img-box, .Sbox-wrapper .frameworks .tools .img-box, .Sbox-wrapper .frameworks .design .img-box {
+  .Sbox-wrapper .frontend .publisher .img-box, .Sbox-wrapper .frontend .backend .img-box, .Sbox-wrapper .frontend .etc .img-box, .Sbox-wrapper .frontend .server .img-box, .Sbox-wrapper .frontend .design .img-box {
     padding-top: 1.5em;
     padding-left: 0;
   }
-  .Sbox-wrapper .frameworks .frontend .s-line, .Sbox-wrapper .frameworks .backend .s-line, .Sbox-wrapper .frameworks .tools .s-line, .Sbox-wrapper .frameworks .design .s-line {
+  .Sbox-wrapper .frontend .publisher .s-line, .Sbox-wrapper .frontend .backend .s-line, .Sbox-wrapper .frontend .etc .s-line, .Sbox-wrapper .frontend .server .s-line, .Sbox-wrapper .frontend .design .s-line {
     display: none;
   }
-  .Sbox-wrapper .frameworks .frontend {
+  .Sbox-wrapper .frontend .frontend {
     padding-left: 0;
     height: 300px;
   }
-  .Sbox-wrapper .frameworks .frontend .img-box img {
+  .Sbox-wrapper .frontend .frontend .img-box img {
     width: 60px;
     margin: 0.5em;
   }
-  .Sbox-wrapper .frameworks .tools {
+  .Sbox-wrapper .frontend .etc {
     padding-left: 0;
   }
 }
 
 @media screen and (max-width: 991px) {
-  .Sbox-wrapper .frameworks {
+  .Sbox-wrapper .frontend {
     margin-top: 300px;
     margin-left: -20%;
     transition: all .5s;
     margin-bottom: 5em;
   }
-  .Sbox-wrapper .frameworks .frameworks {
+  .Sbox-wrapper .frontend .frontend {
     width: 70%;
   }
-  .Sbox-wrapper .frameworks .frameworks .frontend, .Sbox-wrapper .frameworks .frameworks .backend, .Sbox-wrapper .frameworks .frameworks .tools, .Sbox-wrapper .frameworks .frameworks .design {
+  .Sbox-wrapper .frontend .frontend .publisher, .Sbox-wrapper .frontend .frontend .backend, .Sbox-wrapper .frontend .frontend .etc, .Sbox-wrapper .frontend .frontend .server, .Sbox-wrapper .frontend .frontend .design {
     width: 70%;
   }
 }
 
 @media screen and (max-width: 615px) {
-  .Sbox-wrapper .frameworks {
+  .Sbox-wrapper .frontend {
     display: none;
   }
 }
