--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -11,22 +11,13 @@ block content
 			.dot1 
 			.html html / css / javascript
 				.Pbox-wrapper
-					a(href="")
-						.cover 반응형 페이지
-						img(src="/img/mal.png", alt="")
-					a(href="")
-						.cover js 슬라이드 제작
-						img(src="/img/ottogi.png", alt="")
-					a(href="")
-						.cover Mouse Wheel 반응형
+					a(href="https://sb904-portfolio-swatch.web.app/")
+						.cover Mouse Wheel
 						img(src="/img/MouseWheel.png", alt="")
 					a(href="https://sb904-ella.web.app/html/index.html")
 						.cover ELLA 쇼핑몰
 							div 2021.02.23~2021.03.02
 						img(src="/img/ella.png", alt="")
-					a(href="")
-						.cover GOYA
-						img(src="/img/goya.png", alt="")
 					a(href="https://sb904-weather.web.app/")
 						.cover 날씨 앱
 						img(src="/img/weather.png", alt="")
@@ -37,16 +28,19 @@ block content
 					a(href="https://sb904-note.firebaseapp.com/html/index.html")
 						.cover TODO-APP
 						img(src="/img/todoapp.png", alt="") 
-					a(href="")
-						.cover 
-						img(src="/img/es6.png", alt="") 
+					a(href="http://3.36.171.236:3000/board")
+						.cover Board
+						img(src="/img/board.png", alt="") 
 		.dot3-wrap
 			.dot3 
 			.vue react / vue
 				.Pbox-wrapper
 					a(href="https://sb904-vue-weather.firebaseapp.com/")
-						.cover Vue-Weather
+						.cover Weather
 						img(src="/img/vue-weather.png", alt="") 
-					a(href="")
-						.cover Vue-Weather
-						img(src="/img/vue-weather.png", alt="") 
+					a(href="http://3.36.171.236:3000/board")
+						.cover Board
+						img(src="/img/board.png", alt="") 
+					a(href="https://sb904-vue-todo.web.app")
+						.cover TODO-APP
+						img(src="/img/vue-todo.png", alt="") 
