--- a/views/skills/skills.pug
+++ b/views/skills/skills.pug
@@ -6,38 +6,43 @@ block content
 		.color 
 		.title Skills
 	.Sbox-wrapper 
-		.frameworks frameworks
+		.frontend Front-End
 			.tape
 			.s-line
 			.img-box
-				img(src="../img/sass.png", alt="icon-img" style="width: 70px;")
 				img(src="../img/bootstrap.png", alt="" style="width: 70px;")
 				img(src="../img/firebase.png", alt="icon-img")
-				img(src="../img/es6.png", alt="icon-img" style="width: 70px; height:70px;")
-				img(src="../img/jquery.png", alt="icon-img" style="width: 70px; height:70px;")
 				img(src="../img/react.png", alt="icon-img" style="width: 70px;")
 				img(src="../img/vue.png", alt="icon-img" style="width: 70px;")
-			.frontend front-end
+			.publisher Publisher
 				.s-line 
 				.img-box
 					div AJAX
 					img(src="../img/html.png", alt="" style="width: 70px;")
 					img(src="../img/css.png", alt="" style="width: 70px;")
-					img(src="../img/js.png", alt="" style="width: 70px; 	height:70px;")
-					img(src="../img/pug.png", alt="" style="width: 85px;")
-			.backend back-end
+					img(src="../img/js.png", alt="" style="width: 70px;	height:70px;")
+					img(src="../img/es6.png", alt="icon-img" style="width: 70px; height:70px;")
+					img(src="../img/jquery.png", alt="icon-img" style="width: 70px; height:70px;")
+					img(src="../img/sass.png", alt="icon-img" style="width: 70px;")
+					img(src="../img/less.png", alt="" style="width: 70px;")
+			.backend back-End
 				.s-line
 				.img-box
 					img(src="../img/mysql.png", alt="" style="width: 70px;")
-					img(src="../img/aws.png", alt="" style="width: 70px;")
 					img(src="../img/nodejs.png", alt="" style="width: 70px;")
-					//- img(src="../img/expressjs.png", alt="" style="width: 	100px;")
-					div express
-			.tools tools
+					div.text-img(style="height: 70px; line-height: 70px;") Mongoose
+					div.text-img(style="height: 70px; line-height: 70px;") Passport
+					img(src="../img/mongoDB.png", alt="" style="width: 70px; background-color: white;")
+					img(src="../img/Sequelize.png", alt="" style="width: 70px;")
+			.etc ETC
 				.s-line
 				.img-box
 					img(src="../img/git.png", alt="" style="width: 70px;")
-					img(src="../img/vs.png", alt="" style="width: 70px;")
+			.server Server
+				.s-line
+				.img-box
+					img(src="../img/aws.png", alt="" style="width: 70px;")
+					img(src="../img/ec2.png", alt="" style="width: 70px;")
 			.design design		
 				.s-line
 				.img-box
