--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -13,13 +13,15 @@ block content
 				.Pbox-wrapper
 					a(href="https://sb904-portfolio-swatch.web.app/")
 						.cover Mouse Wheel
+							div 2020.12.02
 						img(src="/img/MouseWheel.png", alt="")
 					a(href="https://sb904-ella.web.app/html/index.html")
 						.cover ELLA 쇼핑몰
-							div 2021.02.23~2021.03.02
+							div 2020.12.10 ~ 2020.12.29
 						img(src="/img/ella.png", alt="")
 					a(href="https://sb904-weather.web.app/")
 						.cover 날씨 앱
+							div 2021.01.04 ~2021.01.08
 						img(src="/img/weather.png", alt="")
 		.dot2-wrap
 			.dot2 
@@ -27,9 +29,11 @@ block content
 				.Pbox-wrapper
 					a(href="https://sb904-note.firebaseapp.com/html/index.html")
 						.cover TODO-APP
+							div 2021.01.11 ~2021.01.12
 						img(src="/img/todoapp.png", alt="") 
 					a(href="http://3.36.171.236:3000/board")
 						.cover Board
+							div 2021.01.26 ~ 2021.03.04
 						img(src="/img/board.png", alt="") 
 		.dot3-wrap
 			.dot3 
@@ -37,10 +41,13 @@ block content
 				.Pbox-wrapper
 					a(href="https://sb904-vue-weather.firebaseapp.com/")
 						.cover Weather
+							div 2021.02.19 ~ 2021.03.02
 						img(src="/img/vue-weather.png", alt="") 
 					a(href="http://3.36.171.236:3000/board")
 						.cover Board
+							div 2021.01.26 ~ 2021.03.04
 						img(src="/img/board.png", alt="") 
 					a(href="https://sb904-vue-todo.web.app")
 						.cover TODO-APP
+							div 2021.03.08 ~ 2021.03.10
 						img(src="/img/vue-todo.png", alt="") 
