--- a/views/contact/contact.pug
+++ b/views/contact/contact.pug
@@ -24,4 +24,5 @@ block content
       .p.git-hub .git-hub :  
         a(href="https://github.com/gobltpqls99") https://github.com/gobltpqls99 
       .p.e-mail .e-mail : gobltpqls99@naver.com
-      .p.cell-phone .cell-phone : 010-7197-3595
+      .p.cell-phone .OpenProfile :
+        a(href="https://open.kakao.com/o/spnBxZ1c") https://open.kakao.com/o/spnBxZ1c
