--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -46,7 +46,7 @@ block content
 					a(href="http://3.36.171.236:3000/board")
 						.cover Board
 							div 2021.01.26 ~ 2021.03.04
-						img(src="/img/board.png", alt="") 
+						img(src="/img/react-board.png", alt="") 
 					a(href="https://sb904-vue-todo.web.app")
 						.cover TODO-APP
 							div 2021.03.08 ~ 2021.03.10
