--- a/views/contact/contact.pug
+++ b/views/contact/contact.pug
@@ -10,10 +10,9 @@ block content
       .text-wrap
         .hello.he1 안녕하세요.
         .hello.he2 저의 첫 포트폴리오에 들어오신 것을 환영합니다. >_<
-        .hello.he3 현재 사이트는 pug / node.js / scss 로 제작되어 있습니다.
+        .hello.he3 현재 사이트는 node.js 로 제작되어 있습니다.
         .text
-          .hello.he3 포트폴리오에 대해 관심이 생기셨거나, 궁금한 점이 있으시다면 아래에 있는 
-          .hello.he4 이메일로 연락 주시길 바랍니다.
+          .hello.he4 포트폴리오에 대해 궁금한 점이 있으시다면 아래에 있는 연락처로 연락 주시길 바랍니다.
         .hello.he6 지금까지 성장하는 개발자 이세빈이였습니다 !
         .line-wrap
           .line 
