--- a/public/css/skills.css
+++ b/public/css/skills.css
@@ -41,6 +41,27 @@ body {
   font-size: 1.5em;
 }
 
+.Sbox-wrapper img {
+  overflow: hidden;
+  width: 70px;
+  height: 100%;
+  transition: all 1s;
+}
+
+.Sbox-wrapper img:hover {
+  transform: scale(1.1);
+}
+
+.Sbox-wrapper .text-img {
+  overflow: hidden;
+  transition: all 1s;
+  cursor: pointer;
+}
+
+.Sbox-wrapper .text-img:hover {
+  transform: scale(1.1);
+}
+
 .Sbox-wrapper .frontend {
   margin-left: 5em;
   margin-top: 6em;
@@ -83,8 +104,8 @@ body {
   height: 400px;
   background: rgba(255, 255, 255, 0.17);
   border: 1px solid #dedede;
-  padding-top: 1em;
-  padding-left: 1em;
+  padding-top: 1.3em;
+  padding-left: 1.5em;
   position: absolute;
   left: -506px;
   top: 40%;
@@ -99,19 +120,16 @@ body {
 }
 
 .Sbox-wrapper .frontend .publisher .img-box {
-  padding-left: 0.9em;
+  padding-left: 0.2em;
   padding-top: 0.7em;
 }
 
-.Sbox-wrapper .frontend .publisher .img-box div {
-  margin: 0.9em 0.5em;
-  width: 70px;
-  height: 70px;
+.Sbox-wrapper .frontend .publisher .img-box .text-img {
+  width: 95px;
   display: inline-block;
   font-family: "Noto Sans KR", sans-serif;
   font-size: 0.9em;
   text-align: center;
-  padding-top: 0.9em;
 }
 
 .Sbox-wrapper .frontend .publisher .img-box img {
@@ -141,18 +159,20 @@ body {
 }
 
 .Sbox-wrapper .frontend .backend .img-box {
-  padding-top: 0.8em;
+  padding-top: 0.5em;
 }
 
 .Sbox-wrapper .frontend .backend .img-box img {
   margin: 0.5em;
 }
 
-.Sbox-wrapper .frontend .backend .img-box div {
+.Sbox-wrapper .frontend .backend .img-box .text-img {
+  width: 95px;
   display: inline-block;
+  font-weight: bold;
   font-family: "Noto Sans KR", sans-serif;
-  font-size: 0.8em;
-  margin: 0.5em;
+  font-size: 0.7em;
+  padding-top: 1em;
 }
 
 .Sbox-wrapper .frontend .etc {
@@ -227,10 +247,10 @@ body {
   height: 180px;
   background: rgba(255, 255, 255, 0.1);
   border: 1px solid #dedede;
-  padding-top: 1em;
+  padding-top: 0.7em;
   position: absolute;
   left: -260px;
-  bottom: -340px;
+  bottom: -345px;
 }
 
 .Sbox-wrapper .frontend .design .s-line {
@@ -239,12 +259,12 @@ body {
   opacity: .5;
   background-color: #dedede;
   position: absolute;
-  top: 95px;
+  top: 90px;
   left: -50px;
 }
 
 .Sbox-wrapper .frontend .design .img-box {
-  padding-top: 1em;
+  padding-top: 1.5em;
 }
 
 .Sbox-wrapper .frontend .design .img-box img {
