--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -29,8 +29,8 @@ body {
   .text-wrapper {
     width: 100%; height: 200px;
     color: #dedede; font-family: $Notos;
-    position: absolute; top: 250px; left: 15%;
-    font-size: 1em;
+    position: absolute; top: 270px; left: 15%;
+    font-size: 1.1em;
     .text-wrap {
       .hello { margin-top: 1.2em; }
       .text{  position: relative;
@@ -45,7 +45,6 @@ body {
           width: 100%; height: 0.01em;
           background-color: #4bf1f1;
           margin-top: 2em;
-          @include desktop { left: -15%;  bottom: -150%; }
         }
       }
     }
@@ -54,7 +53,7 @@ body {
   }
   .contact-container {
     position: absolute; top: 550px; right: 10%;
-    color: #dedede; font-size: 1.45em; font-family: $d2;
+    color: #dedede; font-size: 1.6em; font-family: $d2;
     .contact-wrapper {
       font-size: 1.5em;
       h1 {
@@ -64,14 +63,15 @@ body {
         padding-right: 0.5em;
         position: relative;
         .h1-pen {
-          position: absolute; top: 53%; left: 11%;
+          position: absolute; top: 53%; left: 54px;
           width: 48%; height: 17px; background-color: #4bf1f14f;
+          @include tablet { width: 40%; left: 40px;}
         }
       }
     }
     .p { width: 100%; padding: 0.5em 2em; font-size: 0.7em; display: block;}
     .cell-phone { margin-bottom: 3em; }
-    @include tablet { font-size: 1.3em; left: 170px; }
+    @include tablet { font-size: 1.3em; left: 170px;}
     @include mobileS { display: none; }
   }
 }
