--- a/views/skills/skills.pug
+++ b/views/skills/skills.pug
@@ -10,30 +10,30 @@ block content
 			.tape
 			.s-line
 			.img-box
-				img(src="../img/bootstrap.png", alt="" style="width: 70px;")
-				img(src="../img/firebase.png", alt="icon-img")
+				img(src="../img/bootstrap.png", alt="" style="width: 75px;")
 				img(src="../img/react.png", alt="icon-img" style="width: 70px;")
+				img(src="../img/firebase.png", alt="icon-img" style="width: 75px;")
 				img(src="../img/vue.png", alt="icon-img" style="width: 70px;")
 			.publisher Publisher
 				.s-line 
 				.img-box
-					div AJAX
 					img(src="../img/html.png", alt="" style="width: 70px;")
 					img(src="../img/css.png", alt="" style="width: 70px;")
 					img(src="../img/js.png", alt="" style="width: 70px;	height:70px;")
 					img(src="../img/es6.png", alt="icon-img" style="width: 70px; height:70px;")
-					img(src="../img/jquery.png", alt="icon-img" style="width: 70px; height:70px;")
+					div.text-img AJAX
 					img(src="../img/sass.png", alt="icon-img" style="width: 70px;")
 					img(src="../img/less.png", alt="" style="width: 70px;")
+					img(src="../img/jquery.png", alt="icon-img" style="width: 70px; height:70px;")
 			.backend back-End
 				.s-line
 				.img-box
 					img(src="../img/mysql.png", alt="" style="width: 70px;")
 					img(src="../img/nodejs.png", alt="" style="width: 70px;")
 					div.text-img(style="height: 70px; line-height: 70px;") Mongoose
-					div.text-img(style="height: 70px; line-height: 70px;") Passport
 					img(src="../img/mongoDB.png", alt="" style="width: 70px; background-color: white;")
-					img(src="../img/Sequelize.png", alt="" style="width: 70px;")
+					div.text-img(style="height: 70px; line-height: 70px;") Passport
+					img(src="../img/Sequelize.png", alt="" style="width: 80px;")
 			.etc ETC
 				.s-line
 				.img-box
