--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -14,15 +14,15 @@ block content
 					a(href="https://sb904-portfolio-swatch.web.app/")
 						.cover Mouse Wheel
 							div 2020.12.02
-						img(src="/img/MouseWheel.png", alt="")
+						img(src="/img/MouseWheel.PNG", alt="")
 					a(href="https://sb904-ella.web.app/html/index.html")
 						.cover ELLA 쇼핑몰
 							div 2020.12.10 ~ 2020.12.29
-						img(src="/img/ella.png", alt="")
+						img(src="/img/ella.PNG", alt="")
 					a(href="https://sb904-weather.web.app/")
 						.cover 날씨 앱
 							div 2021.01.04 ~2021.01.08
-						img(src="/img/weather.png", alt="")
+						img(src="/img/weather.PNG", alt="")
 		.dot2-wrap
 			.dot2 
 			.node node.js
@@ -30,11 +30,11 @@ block content
 					a(href="https://sb904-note.firebaseapp.com/html/index.html")
 						.cover TODO-APP
 							div 2021.01.11 ~2021.01.12
-						img(src="/img/todoapp.png", alt="") 
+						img(src="/img/todoapp.PNG", alt="") 
 					a(href="http://3.36.171.236:3000/board")
 						.cover Board
 							div 2021.01.26 ~ 2021.03.04
-						img(src="/img/board.png", alt="") 
+						img(src="/img/board.PNG", alt="") 
 		.dot3-wrap
 			.dot3 
 			.vue react / vue
@@ -42,12 +42,12 @@ block content
 					a(href="https://sb904-vue-weather.firebaseapp.com/")
 						.cover Weather
 							div 2021.02.19 ~ 2021.03.02
-						img(src="/img/vue-weather.png", alt="") 
+						img(src="/img/vue-weather.PNG", alt="") 
 					a(href="http://3.36.171.236:3000/board")
 						.cover Board
 							div 2021.01.26 ~ 2021.03.04
-						img(src="/img/react-board.png", alt="") 
+						img(src="/img/react-board.PNG", alt="") 
 					a(href="https://sb904-vue-todo.web.app")
 						.cover TODO-APP
 							div 2021.03.08 ~ 2021.03.10
-						img(src="/img/vue-todo.png", alt="") 
+						img(src="/img/vue-todo.PNG", alt="") 
