--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -43,7 +43,7 @@ block content
 						.cover Weather
 							div 2021.02.19 ~ 2021.03.02
 						img(src="/img/vue-weather.PNG", alt="") 
-					a(href="http://3.36.171.236:3000/board")
+					a(href="http://3.36.171.236:5000")
 						.cover Board
 							div 2021.01.26 ~ 2021.03.04
 						img(src="/img/react-board.PNG", alt="") 
