--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -11,7 +11,7 @@ block content
 			.dot1 
 			.html html / css / javascript
 				.Pbox-wrapper
-					a(href="https://sb904-portfolio-swatch.web.app/")
+					a(href="https://sb904-portfolio-swatch.web.app/" target="_blank")
 						.cover Mouse Wheel
 							div 2020.12.02
 						img(src="/img/MouseWheel.PNG", alt="")
