--- a/public/scss/skills.scss
+++ b/public/scss/skills.scss
@@ -24,7 +24,7 @@ body {
 .Sbox-wrapper {
 	img { overflow: hidden; width: 70px; height: 100%; transition: all 1s; }
 	img:hover { transform: scale(1.1); }
-	.text-img { overflow: hidden; transition: all 1s; cursor: pointer; }
+	.text-img { overflow: hidden; transition: all 1s; cursor: default; }
 	.text-img:hover { transform: scale(1.1); }
 	font-family: $d2;
 	width: 100%; height: 100%;
