--- a/views/contact/contact.pug
+++ b/views/contact/contact.pug
@@ -24,4 +24,4 @@ block content
         a(href="https://github.com/gobltpqls99") https://github.com/gobltpqls99 
       .p.e-mail .e-mail : gobltpqls99@naver.com
       .p.cell-phone .OpenProfile :
-        a(href="https://open.kakao.com/o/sKS47P2c") https://open.kakao.com/o/sKS47P2c
+        a(href="https://open.kakao.com/o/sKS47P2c" target="_blank") https://open.kakao.com/o/sKS47P2c
