--- a/views/projects/projects.pug
+++ b/views/projects/projects.pug
@@ -15,15 +15,15 @@ block content
 						.cover Mouse Wheel
 							div 2020.12.02
 						img(src="/img/MouseWheel.PNG", alt="")
-					a(href="https://sb904-ella.web.app/html/index.html")
+					a(href="https://sb904-ella.web.app/html/index.html" target="_blank")
 						.cover ELLA 쇼핑몰
 							div 2020.12.10 ~ 2020.12.29
 						img(src="/img/ella.PNG", alt="")
-					a(href="https://sb904-weather.web.app/")
+					a(href="https://sb904-weather.web.app/" target="_blank")
 						.cover 날씨 앱
 							div 2021.01.04 ~2021.01.08
 						img(src="/img/weather.PNG", alt="")
-					a(href="https://sb904-note.firebaseapp.com/html/index.html")
+					a(href="https://sb904-note.firebaseapp.com/html/index.html" target="_blank")
 						.cover TODO-APP
 							div 2021.01.11 ~2021.01.12
 						img(src="/img/todoapp.PNG", alt="") 
@@ -31,7 +31,7 @@ block content
 			.dot2 
 			.node node.js
 				.Pbox-wrapper
-					a(href="http://3.36.171.236:3000/board")
+					a(href="http://3.36.171.236:3000/board" target="_blank")
 						.cover Board
 							div 2021.01.26 ~ 2021.03.04
 						img(src="/img/board.PNG", alt="") 
@@ -39,15 +39,15 @@ block content
 			.dot3 
 			.vue react / vue
 				.Pbox-wrapper
-					a(href="https://sb904-vue-weather.firebaseapp.com/")
+					a(href="https://sb904-vue-weather.firebaseapp.com/" target="_blank")
 						.cover Weather
 							div 2021.02.19 ~ 2021.03.02
 						img(src="/img/vue-weather.PNG", alt="") 
-					a(href="http://3.36.171.236:5000")
+					a(href="http://3.36.171.236:5000" target="_blank")
 						.cover Board
 							div 2021.01.26 ~ 2021.03.04
 						img(src="/img/react-board.PNG", alt="") 
-					a(href="https://sb904-vue-todo.web.app")
+					a(href="https://sb904-vue-todo.web.app" target="_blank")
 						.cover TODO-APP
 							div 2021.03.08 ~ 2021.03.10
 						img(src="/img/vue-todo.PNG", alt="") 
