--- a/views/contact/contact.pug
+++ b/views/contact/contact.pug
@@ -21,7 +21,7 @@ block content
         h1 h1&nbsp;CONTACT
           .h1-pen
       .p.git-hub .git-hub :  
-        a(href="https://github.com/gobltpqls99") https://github.com/gobltpqls99 
+        a(href="https://github.com/gobltpqls99" target="_blank") https://github.com/gobltpqls99 
       .p.e-mail .e-mail : gobltpqls99@naver.com
       .p.cell-phone .OpenProfile :
         a(href="https://open.kakao.com/o/sKS47P2c" target="_blank") https://open.kakao.com/o/sKS47P2c
