--- a/public/scss/projects.scss
+++ b/public/scss/projects.scss
@@ -20,7 +20,7 @@
 	.dot1-wrap {
 		display: block; height: 100%; margin-left: 19.75%;
 		padding-top: 15em; font-size: 1.5em;	width: 80%; color: #eee;
-		.dot1 { width: 0.5em; height: 0.5em; border-radius: 50%; background-color: #4af1f1; }
+		.dot1 { width: 0.5em; height: 0.5em; border-radius: 50%; background-color: #4af1f1; @include mobile { display: none; } }
 		.html {
 			width: 100%; font-family: $d2; margin-left: 2.5em;
 			.Pbox-wrapper { display: flex; flex-wrap: wrap; margin-top: 1.3em;
@@ -38,13 +38,15 @@
 					@include desktopS { width: 400px; }
 				} a:hover { .cover { transform: translateY(0); opacity: 1;} }
 			}
+			@include mobile {
+				margin: 0; max-width: 100%;
+			}
 		}
-		@include tabletM { display: none; }
 	}
 	.dot2-wrap {
 		font-size: 1.5em;	width: 80%; color: #eee;
 		height: 100%; display: block; margin-left: 19.75%; padding-top: 5em;
-		.dot2 { width: 0.5em; height: 0.5em; border-radius: 50%; background-color: #4af1f1; }
+		.dot2 { width: 0.5em; height: 0.5em; border-radius: 50%; background-color: #4af1f1; @include mobile { display: none; } }
 		.node {
 			width: 100%; font-family: $d2; margin-left: 2.5em;
 			.Pbox-wrapper { display: flex; flex-wrap: wrap; margin-top: 1.3em;
@@ -62,13 +64,16 @@
 					@include desktopS { width: 400px; }
 				} a:hover { .cover { transform: translateY(0); opacity: 1;} }
 			}
+			@include mobile {
+				margin: 0; max-width: 100%;
+			}
 		}
-		@include tabletM { display: none; }
 	}
 	.dot3-wrap {
+		margin-bottom: 2em;
 		font-size: 1.5em;	width: 80%; color: #eee;
 		display: block; height: 100%; margin-left: 19.75%; padding-top: 5em;
-		.dot3 { width: 0.5em; height: 0.5em; border-radius: 50%; background-color: #4af1f1; }
+		.dot3 { width: 0.5em; height: 0.5em; border-radius: 50%; background-color: #4af1f1; @include mobile { display: none; } }
 		.vue {
 			width: 100%; font-family: $d2; margin-left: 2.5em;
 			.Pbox-wrapper { display: flex; flex-wrap: wrap; margin-top: 1.3em;
@@ -86,8 +91,10 @@
 					@include desktopS { width: 400px; }
 				} a:hover { .cover { transform: translateY(0); opacity: 1;} }
 			}
+			@include mobile {
+				margin: 0; max-width: 100%;
+			}
 		}
-		@include tabletM { display: none; }
 	}
 }//Pcontainer
 
