--- a/views/skills/skills.pug
+++ b/views/skills/skills.pug
@@ -10,44 +10,44 @@ block content
 			.tape
 			.s-line
 			.img-box
-				img(src="../img/bootstrap.png", alt="" style="width: 75px;")
-				img(src="../img/react.png", alt="icon-img" style="width: 70px;")
-				img(src="../img/firebase.png", alt="icon-img" style="width: 75px;")
-				img(src="../img/vue.png", alt="icon-img" style="width: 70px;")
+				img(src="../img/bootstrap.png", alt="bootstrap" style="width: 75px;")
+				img(src="../img/react.png", alt="react" style="width: 70px;")
+				img(src="../img/firebase.png", alt="firebase" style="width: 75px;")
+				img(src="../img/vue.png", alt="vue" style="width: 70px;")
 			.publisher Publisher
 				.s-line 
 				.img-box
-					img(src="../img/html.png", alt="" style="width: 70px;")
-					img(src="../img/css.png", alt="" style="width: 70px;")
-					img(src="../img/js.png", alt="" style="width: 70px;	height:70px;")
-					img(src="../img/es6.png", alt="icon-img" style="width: 70px; height:70px;")
+					img(src="../img/html.png", alt="html" style="width: 70px;")
+					img(src="../img/css.png", alt="css" style="width: 70px;")
+					img(src="../img/js.png", alt="js" style="width: 70px;	height:70px;")
+					img(src="../img/es6.png", alt="es6" style="width: 70px; height:70px;")
 					div.text-img AJAX
-					img(src="../img/sass.png", alt="icon-img" style="width: 70px;")
-					img(src="../img/less.png", alt="" style="width: 70px;")
-					img(src="../img/jquery.png", alt="icon-img" style="width: 70px; height:70px;")
+					img(src="../img/sass.png", alt="sass" style="width: 70px;")
+					img(src="../img/less.png", alt="less" style="width: 70px;")
+					img(src="../img/jquery.png", alt="jquery" style="width: 70px; height:70px;")
 			.backend back-End
 				.s-line
 				.img-box
-					img(src="../img/mysql.png", alt="" style="width: 70px;")
-					img(src="../img/nodejs.png", alt="" style="width: 70px;")
+					img(src="../img/mysql.png", alt="mysql" style="width: 70px;")
+					img(src="../img/nodejs.png", alt="nodejs" style="width: 70px;")
 					div.text-img(style="height: 70px; line-height: 70px;") Mongoose
-					img(src="../img/mongoDB.png", alt="" style="width: 70px; background-color: white;")
+					img(src="../img/mongoDB.png", alt="mongoDB" style="width: 70px; background-color: white;")
 					div.text-img(style="height: 70px; line-height: 70px;") Passport
-					img(src="../img/Sequelize.png", alt="" style="width: 80px;")
+					img(src="../img/Sequelize.png", alt="Sequelize" style="width: 80px;")
 			.etc ETC
 				.s-line
 				.img-box
-					img(src="../img/git.png", alt="" style="width: 70px;")
+					img(src="../img/git.png", alt="git" style="width: 70px;")
 			.server Server
 				.s-line
 				.img-box
-					img(src="../img/ec2.png", alt="" style="width: 70px;")
+					img(src="../img/ec2.png", alt="ec2" style="width: 70px;")
 			.design design		
 				.s-line
 				.img-box
-					img(src="../img/ps.png", alt="" style="width: 70px; 	height:70px;")
-					img(src="../img/xd.png", alt="" style="width: 70px; 	height:70px;")
-					img(src="../img/ai.png", alt="" style="width: 70px; 	height:70px;")
+					img(src="../img/ps.png", alt="ps" style="width: 70px; 	height:70px;")
+					img(src="../img/xd.png", alt="xd" style="width: 70px; 	height:70px;")
+					img(src="../img/ai.png", alt="ai" style="width: 70px; 	height:70px;")
 	
 		
 	
